Outputs of fock operator don't match up with Morten's code...

--- a/src/makefile
+++ b/src/makefile
@@ -3,10 +3,16 @@ CFLAGS = -std=c++11
 LIB = -larmadillo
 
 
-all: run
+all: SRG MBPT2
 
-run: pairing_model.o srg.o
-	${CC} ${CFLAGS} pairing_model.o srg.o -o run ${LIB}
+SRG: pairing_model.o srg.o
+	${CC} ${CFLAGS} pairing_model.o srg.o -o SRG ${LIB}
+
+MBPT2: main.o system.o
+	${CC} ${CFLAGS} main.o system.o -o MBPT2
+
+main.o: main.cpp 
+	${CC} ${CFLAGS} -c main.cpp
 
 pairing_model.o: pairing_model.cpp
 	${CC} ${CFLAGS} -c pairing_model.cpp ${LIB}
@@ -17,5 +23,9 @@ srg.o: srg.cpp
 jacobi.o: jacobi.cpp
 	${CC} ${CFLAGS} -c jacobi.cpp ${LIB}
 
+system.o: system.cpp
+	${CC} ${CFLAGS} -c system.cpp
+
 clean: 
-	rm run *.o *.dat
+	rm SRG MBPT2 
+	rm *.o *.dat
