--- a/src/makefile
+++ b/src/makefile
@@ -3,10 +3,13 @@ CFLAGS = -std=c++11
 LIB = -larmadillo
 
 
-all: RUN TEST
+all: RUN TEST SRG
 
 RUN: main.o system.o solver.o srg.o
 	${CC} ${CFLAGS} main.o system.o solver.o srg.o -o RUN ${LIB}
+
+SRG: main.o srg.o
+	${CC} ${CFLAGS} main.o srg.o -o SRG ${LIB}
 
 TEST: test_main.o unit_tests.o system.o
 	${CC} ${CFLAGS} test_main.o unit_tests.o system.o -o TEST 
@@ -35,4 +38,6 @@ unit_tests.o: test/unit_tests.cpp
 
 clean: 
 	rm *.o
-	rm RUN TEST
+	rm RUN 
+	rm SRG
+	rm TEST 
